--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -12,13 +12,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
     <title>Tinas Tierchen</title>
+
+    <style>
+        .dancing-script {
+            font-family: 'Dancing Script', cursive
+        }
+    </style>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
 
     <div class="position-absolute m-4" style="z-index: 999">
-        <h1 style="font-family: 'Dancing Script', cursive; font-size: 82px">Tinas Tierchen</h1>
+        <h1 class="dancing-script" style="font-size: 82px">Tinas Tierchen</h1>
     </div>
 
 
@@ -43,7 +49,12 @@
 
 
     <div class="container">
-        <div class="row">
+        <h2 class="mt-4 dancing-script">Amigurumi Tierchen</h2>
+        <div>
+            Vor einigen Jahren bin ich durch Zufall auf die Anleitung eines süßen kleinen Tierchens gestoßen. Seitdem haben mich diese Tierchen nicht mehr losgelassen, denn wer könnte so kleinen süßen Knopfaugen widerstehen. Im Laufe der Jahre habe ich so einige Tierchen gehäkelt und die Freude daran möchte ich gerne mit euch teilen.
+        </div>
+
+        <div class="row mt-4">
             <div class="col">
                 <div class="card m-4" style="width: 18rem;">
                     <img class="d-block mx-auto mb-4" src="roary1.jpg" height="256" width="256" alt="Roary the tiger"/>
@@ -87,6 +98,18 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+
+
+    <div class="container">
+        <h2 class="mt-4 dancing-script">Kontakt</h2>
+        <div>
+            <div>Christina Jung</div>
+            <div>+49 6306 3330915</div>
+            <div>tina.mona.jung@gmail.com</div>
+            <div>Am Nabenberg 16, 67705 Trippstadt</div>
         </div>
     </div>
 </body>
