--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="roary43.jpg" class="d-block w-100" alt="Roary der Tiger">
+                <img src="img/tiger.jpeg" height="1000" class="d-block w-100" alt="Roary der Tiger"/>
             </div>
             <div class="carousel-item">
-                <img src="roary43.jpg" class="d-block w-100" alt="Roary der Tiger">
+                <img src="img/yoshi.jpeg" height="1000" class="d-block w-100" alt="Yoshi"/>
+            </div>
+            <div class="carousel-item">
+                <img src="img/elch.jpeg" height="1000" class="d-block w-100" alt="Morton der Elch"/>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -57,22 +60,20 @@
         <div class="row mt-4">
             <div class="col">
                 <div class="card m-4" style="width: 18rem;">
-                    <img class="d-block mx-auto mb-4" src="roary1.jpg" height="256" width="256" alt="Roary the tiger"/>
+                    <img class="d-block mx-auto mb-4" src="img/tiger.jpeg" height="256" width="256" alt="Roary the tiger"/>
                     <div class="card-body">
                         <h5 class="card-title">Roary der Tiger</h5>
                         <p class="card-text">Jedes Tier im Dschungel kennt den kleinen, frechen Tiger Roary. Verschmitzt und gewitzt, wie er ist, hat er häufig nur Dummheiten im Kopf. Aber lange kann ihm keiner böse sein. Denn in diesem Tigerchen steckt natürlich auch ein bisschen Miezekatze.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
 
             <div class="col">
                 <div class="card m-4" style="width: 18rem;">
-                    <img class="d-block mx-auto mb-4" src="roary1.jpg" height="256" width="256" alt="Roary the tiger"/>
+                    <img class="d-block mx-auto mb-4" src="img/elch.jpeg" height="256" width="256" alt="Roary the tiger"/>
                     <div class="card-body">
-                        <h5 class="card-title">Roary der Tiger</h5>
-                        <p class="card-text">Jedes Tier im Dschungel kennt den kleinen, frechen Tiger Roary. Verschmitzt und gewitzt, wie er ist, hat er häufig nur Dummheiten im Kopf. Aber lange kann ihm keiner böse sein. Denn in diesem Tigerchen steckt natürlich auch ein bisschen Miezekatze.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Morton der Elch</h5>
+                        <p class="card-text">Der Elch Morton erregt mit seinem prächtigen Geweih überall Aufmerksamkeit. Und das genießt er sichtlich. Morton kommt aus dem hohen Norden und ist Kälte und Schnee gewöhnt. Aber ganz ehrlich … nichts geht ihm über ein Nickerchen vor dem offenen Kamin.</p>
                     </div>
                 </div>
             </div>
