Added more content

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
         <div class="row mt-4">
             <div class="col">
-                <div class="card m-4" style="width: 18rem;">
-                    <img class="d-block mx-auto mb-4" src="img/tiger.jpeg" height="256" width="256" alt="Roary the tiger"/>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/tiger.jpeg" width="256" alt="Roary der Tiger"/>
                     <div class="card-body">
                         <h5 class="card-title">Roary der Tiger</h5>
                         <p class="card-text">Jedes Tier im Dschungel kennt den kleinen, frechen Tiger Roary. Verschmitzt und gewitzt, wie er ist, hat er häufig nur Dummheiten im Kopf. Aber lange kann ihm keiner böse sein. Denn in diesem Tigerchen steckt natürlich auch ein bisschen Miezekatze.</p>
@@ -69,8 +69,8 @@
             </div>
 
             <div class="col">
-                <div class="card m-4" style="width: 18rem;">
-                    <img class="d-block mx-auto mb-4" src="img/elch.jpeg" height="256" width="256" alt="Roary the tiger"/>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/elch.jpeg" width="256" alt="Morton der Elch"/>
                     <div class="card-body">
                         <h5 class="card-title">Morton der Elch</h5>
                         <p class="card-text">Der Elch Morton erregt mit seinem prächtigen Geweih überall Aufmerksamkeit. Und das genießt er sichtlich. Morton kommt aus dem hohen Norden und ist Kälte und Schnee gewöhnt. Aber ganz ehrlich … nichts geht ihm über ein Nickerchen vor dem offenen Kamin.</p>
@@ -79,23 +79,33 @@
             </div>
 
             <div class="col">
-                <div class="card m-4" style="width: 18rem;">
-                    <img class="d-block mx-auto mb-4" src="roary1.jpg" height="256" width="256" alt="Roary the tiger"/>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/hase.jpeg" width="256" alt="Wasabi das Häschen"/>
                     <div class="card-body">
-                        <h5 class="card-title">Roary der Tiger</h5>
-                        <p class="card-text">Jedes Tier im Dschungel kennt den kleinen, frechen Tiger Roary. Verschmitzt und gewitzt, wie er ist, hat er häufig nur Dummheiten im Kopf. Aber lange kann ihm keiner böse sein. Denn in diesem Tigerchen steckt natürlich auch ein bisschen Miezekatze.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Wasabi das Häschen</h5>
+                        <p class="card-text">Verspielt, eigensinnig und fröhlich, so ist das Häschen Wasabi. Es findet nichts lustiger, als mit seinen Freunden um die Wette zu rennen, denn im Hakenschlagen und Über-Hindernisse-Springens ist es unschlagbar. Und wer so schnell laufen kann, der ist auch gut im Streiche spielen…</p>
                     </div>
                 </div>
             </div>
 
             <div class="col">
-                <div class="card m-4" style="width: 18rem;">
-                    <img class="d-block mx-auto mb-4" src="roary1.jpg" height="256" width="256" alt="Roary the tiger"/>
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/tukan.jpeg" width="256" alt="Zico der Tukan"/>
                     <div class="card-body">
-                        <h5 class="card-title">Roary der Tiger</h5>
-                        <p class="card-text">Jedes Tier im Dschungel kennt den kleinen, frechen Tiger Roary. Verschmitzt und gewitzt, wie er ist, hat er häufig nur Dummheiten im Kopf. Aber lange kann ihm keiner böse sein. Denn in diesem Tigerchen steckt natürlich auch ein bisschen Miezekatze.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Zico der Tukan</h5>
+                        <p class="card-text">Sieht der Tukan Zico mit seinem glänzend schwarzen Federkleid und dem leuchtend gelben Schnabel nicht richtig majestätisch aus? Als König der Paradiesvögel spreizt er jeden Tag seine Flügel und macht einen ausgedehnten Spazierflug durch den Regenwald.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-4">
+            <div class="col">
+                <div class="card m-2" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/welpe.jpeg" width="256" alt="Dakota der Welpe"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Dakota der Welpe</h5>
+                        <p class="card-text">Dakota ist lieb, knuffig und passt genau auf die Handfläche, so dass er dich überall hin begleiten kann. Dakota ist ein verspielter Welpe, neugierig und voller Energie. Seine langen Ohren flattern im Wind, wenn er auf seinen winzigen Pfötchen angelaufen kommt.</p>
                     </div>
                 </div>
             </div>
@@ -107,10 +117,11 @@
     <div class="container">
         <h2 class="mt-4 dancing-script">Kontakt</h2>
         <div>
-            <div>Christina Jung</div>
+            <div>Tina Jung</div>
             <div>+49 6306 3330915</div>
-            <div>tina.mona.jung@gmail.com</div>
+            <div>tina.mona.jung+tt@gmail.com</div>
             <div>Am Nabenberg 16, 67705 Trippstadt</div>
+            <div><a href="https://www.instagram.com/tinas_tierchen" target="_blank">www.instagram.com/tinas_tierchen</a></div>
         </div>
     </div>
 </body>
