Added more content

--- a/index.html
+++ b/index.html
@@ -17,15 +17,22 @@
         .dancing-script {
             font-family: 'Dancing Script', cursive
         }
+
+        .page-title {
+            padding: 0 0.25em;
+            background-color: #fff;
+            border-radius: .5em;
+            opacity: .5;
+            font-size: 5em;
+            z-index: 999;
+        }
     </style>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
 
-    <div class="position-absolute m-4" style="z-index: 999">
-        <h1 class="dancing-script" style="font-size: 82px">Tinas Tierchen</h1>
-    </div>
+    <div class="position-absolute m-3 page-title dancing-script">Tinas Tierchen</div>
 
 
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -59,7 +66,7 @@
 
         <div class="row mt-4">
             <div class="col">
-                <div class="card m-2" style="width: 18rem;">
+                <div class="card" style="width: 18rem;">
                     <img class="d-block mx-auto mb-4" src="img/tiger.jpeg" width="256" alt="Roary der Tiger"/>
                     <div class="card-body">
                         <h5 class="card-title">Roary der Tiger</h5>
@@ -69,7 +76,7 @@
             </div>
 
             <div class="col">
-                <div class="card m-2" style="width: 18rem;">
+                <div class="card" style="width: 18rem;">
                     <img class="d-block mx-auto mb-4" src="img/elch.jpeg" width="256" alt="Morton der Elch"/>
                     <div class="card-body">
                         <h5 class="card-title">Morton der Elch</h5>
@@ -79,7 +86,7 @@
             </div>
 
             <div class="col">
-                <div class="card m-2" style="width: 18rem;">
+                <div class="card" style="width: 18rem;">
                     <img class="d-block mx-auto mb-4" src="img/hase.jpeg" width="256" alt="Wasabi das Häschen"/>
                     <div class="card-body">
                         <h5 class="card-title">Wasabi das Häschen</h5>
@@ -89,7 +96,7 @@
             </div>
 
             <div class="col">
-                <div class="card m-2" style="width: 18rem;">
+                <div class="card" style="width: 18rem;">
                     <img class="d-block mx-auto mb-4" src="img/tukan.jpeg" width="256" alt="Zico der Tukan"/>
                     <div class="card-body">
                         <h5 class="card-title">Zico der Tukan</h5>
@@ -101,11 +108,41 @@
 
         <div class="row mt-4">
             <div class="col">
-                <div class="card m-2" style="width: 18rem;">
-                    <img class="d-block mx-auto mb-4" src="img/welpe.jpeg" width="256" alt="Dakota der Welpe"/>
+                <div class="card" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/welpe6.jpeg" width="256" alt="Dakota der Welpe"/>
                     <div class="card-body">
                         <h5 class="card-title">Dakota der Welpe</h5>
                         <p class="card-text">Dakota ist lieb, knuffig und passt genau auf die Handfläche, so dass er dich überall hin begleiten kann. Dakota ist ein verspielter Welpe, neugierig und voller Energie. Seine langen Ohren flattern im Wind, wenn er auf seinen winzigen Pfötchen angelaufen kommt.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/yoshi.jpeg" width="256" alt="Yoshi mit Ei"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Yoshi mit Ei</h5>
+                        <p class="card-text">…</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/pilze.jpeg" width="256" alt="PowerUp und LevelUp Pilze"/>
+                    <div class="card-body">
+                        <h5 class="card-title">PowerUp und LevelUp Pilze</h5>
+                        <p class="card-text">…</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/tentakel.jpeg" width="256" alt="Purpur &amp; Grün Tentakel"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Purpur &amp; Grün Tentakel</h5>
+                        <p class="card-text">…</p>
                     </div>
                 </div>
             </div>
