Use landscape pictures only in carousell

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/tiger.jpeg" height="1000" class="d-block w-100" alt="Roary der Tiger"/>
+                <img src="img/tentakel.jpeg" class="d-block w-100" alt="Roary der Tiger"/>
             </div>
             <div class="carousel-item">
-                <img src="img/yoshi.jpeg" height="1000" class="d-block w-100" alt="Yoshi"/>
+                <img src="img/yoshi.jpeg" class="d-block w-100" alt="Yoshi"/>
             </div>
             <div class="carousel-item">
-                <img src="img/elch.jpeg" height="1000" class="d-block w-100" alt="Morton der Elch"/>
+                <img src="img/pilze.jpeg" class="d-block w-100" alt="Morton der Elch"/>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
