Added more content

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/tentakel.jpeg" class="d-block w-100" alt="Roary der Tiger"/>
+                <img src="img/tentakel.jpeg" class="d-block w-100" alt="Purpur &amp; Grün Tentakel"/>
             </div>
             <div class="carousel-item">
                 <img src="img/yoshi.jpeg" class="d-block w-100" alt="Yoshi"/>
             </div>
             <div class="carousel-item">
-                <img src="img/pilze.jpeg" class="d-block w-100" alt="Morton der Elch"/>
+                <img src="img/kakteen.jpeg" class="d-block w-100" alt="Kakteen"/>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -62,7 +62,6 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-
 
     <div class="container">
         <h2 class="mt-4 dancing-script">Amigurumi Tierchen</h2>
@@ -122,7 +121,48 @@
                     </div>
                 </div>
             </div>
+        </div>
 
+
+        <h2 class="mt-4 dancing-script">Boardgame Zubehör</h2>
+
+        <div class="row mt-4">
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/maus_und_mystik.jpeg" width="256" alt="Maus &amp: Mystik Täschchen"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Maus &amp: Mystik Täschchen</h5>
+                        <p class="card-text">…</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/wuerfelbeutel.jpeg" width="256" alt="Würfeluntersetzer"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Würfeluntersetzer</h5>
+                        <p class="card-text">…</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/stoffies.jpeg" width="256" alt="Stoffies"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Stoffies</h5>
+                        <p class="card-text">…</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <h2 class="mt-4 dancing-script">Kleine Nerd Ecke</h2>
+
+        <div class="row mt-4">
             <div class="col">
                 <div class="card" style="width: 18rem;">
                     <img class="d-block mx-auto mb-4" src="img/yoshi.jpeg" width="256" alt="Yoshi mit Ei"/>
@@ -145,9 +185,71 @@
 
             <div class="col">
                 <div class="card" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/stern.jpeg" width="256" alt="Stern"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Stern</h5>
+                        <p class="card-text">…</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card" style="width: 18rem;">
                     <img class="d-block mx-auto mb-4" src="img/tentakel.jpeg" width="256" alt="Purpur &amp; Grün Tentakel"/>
                     <div class="card-body">
                         <h5 class="card-title">Purpur &amp; Grün Tentakel</h5>
+                        <p class="card-text">…</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <h2 class="mt-4 dancing-script">Pflanzen</h2>
+
+        <div class="row mt-4">
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/kakteen.jpeg" width="256" alt="Kakteen"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Kakteen</h5>
+                        <p class="card-text">…</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/blume.jpeg" width="256" alt="Blume"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Blume</h5>
+                        <p class="card-text">…</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <h2 class="mt-4 dancing-script">Klamotten</h2>
+
+        <div class="row mt-4">
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/haarbaender.jpeg" width="256" alt="Haarbänder"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Haarbänder</h5>
+                        <p class="card-text">…</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    <img class="d-block mx-auto mb-4" src="img/haarband_hellblau.jpeg" width="256" alt="Hellblaues Haarband"/>
+                    <div class="card-body">
+                        <h5 class="card-title">Hellblaues Haarband</h5>
                         <p class="card-text">…</p>
                     </div>
                 </div>
