--- a/boardgame.html
+++ b/boardgame.html
@@ -25,7 +25,7 @@
     <div class="row mt-4">
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/maus_und_mystik.jpeg" width="256" alt="Maus & Mystik Täschchen"/>
+                <img class="d-block mx-auto mb-4" src="img_256/maus_und_mystik.jpeg" width="256" alt="Maus & Mystik Täschchen"/>
                 <div class="card-body">
                     <h5 class="card-title">Maus &amp; Mystik T&auml;schchen</h5>
                     <p class="card-text">&hellip;</p>
@@ -34,7 +34,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/wuerfelbeutel.jpeg" width="256" alt="Würfeluntersetzer"/>
+                <img class="d-block mx-auto mb-4" src="img_256/wuerfelbeutel.jpeg" width="256" alt="Würfeluntersetzer"/>
                 <div class="card-body">
                     <h5 class="card-title">W&uuml;rfeluntersetzer</h5>
                     <p class="card-text">&hellip;</p>
@@ -43,7 +43,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/stoffies.jpeg" width="256" alt="Stoffies"/>
+                <img class="d-block mx-auto mb-4" src="img_256/stoffies.jpeg" width="256" alt="Stoffies"/>
                 <div class="card-body">
                     <h5 class="card-title">Stoffies</h5>
                     <p class="card-text">&hellip;</p>
