--- a/nerds.html
+++ b/nerds.html
@@ -25,7 +25,7 @@
     <div class="row mt-4">
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/yoshi.jpeg" width="256" alt="Yoshi mit Ei"/>
+                <img class="d-block mx-auto mb-4" src="img_256/yoshi.jpeg" width="256" alt="Yoshi mit Ei"/>
                 <div class="card-body">
                     <h5 class="card-title">Yoshi mit Ei</h5>
                     <p class="card-text">&hellip;</p>
@@ -34,7 +34,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/pilze.jpeg" width="256" alt="PowerUp und LevelUp Pilze"/>
+                <img class="d-block mx-auto mb-4" src="img_256/pilze.jpeg" width="256" alt="PowerUp und LevelUp Pilze"/>
                 <div class="card-body">
                     <h5 class="card-title">PowerUp und LevelUp Pilze</h5>
                     <p class="card-text">&hellip;</p>
@@ -43,7 +43,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/stern.jpeg" width="256" alt="Stern"/>
+                <img class="d-block mx-auto mb-4" src="img_256/stern.jpeg" width="256" alt="Stern"/>
                 <div class="card-body">
                     <h5 class="card-title">Stern</h5>
                     <p class="card-text">&hellip;</p>
@@ -52,7 +52,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/tentakel.jpeg" width="256" alt="Purpur & Grün Tentakel"/>
+                <img class="d-block mx-auto mb-4" src="img_256/tentakel.jpeg" width="256" alt="Purpur & Grün Tentakel"/>
                 <div class="card-body">
                     <h5 class="card-title">Purpur &amp; Gr&uuml;n Tentakel</h5>
                     <p class="card-text">&hellip;</p>
