--- a/pflanzen.html
+++ b/pflanzen.html
@@ -25,7 +25,7 @@
     <div class="row mt-4">
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/kakteen.jpeg" width="256" alt="Kakteen"/>
+                <img class="d-block mx-auto mb-4" src="img_256/kakteen.jpeg" width="256" alt="Kakteen"/>
                 <div class="card-body">
                     <h5 class="card-title">Kakteen</h5>
                     <p class="card-text">&hellip;</p>
@@ -34,7 +34,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/blume.jpeg" width="256" alt="Blume"/>
+                <img class="d-block mx-auto mb-4" src="img_256/blume.jpeg" width="256" alt="Blume"/>
                 <div class="card-body">
                     <h5 class="card-title">Blume</h5>
                     <p class="card-text">&hellip;</p>
