--- a/klamotten.html
+++ b/klamotten.html
@@ -25,7 +25,7 @@
     <div class="row mt-4">
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/haarbaender.jpeg" width="256" alt="Haarbänder"/>
+                <img class="d-block mx-auto mb-4" src="img_256/haarbaender.jpeg" width="256" alt="Haarbänder"/>
                 <div class="card-body">
                     <h5 class="card-title">Haarb&auml;nder</h5>
                     <p class="card-text">&hellip;</p>
@@ -34,7 +34,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/haarband_hellblau.jpeg" width="256" alt="Hellblaues Haarband"/>
+                <img class="d-block mx-auto mb-4" src="img_256/haarband_hellblau.jpeg" width="256" alt="Hellblaues Haarband"/>
                 <div class="card-body">
                     <h5 class="card-title">Hellblaues Haarband</h5>
                     <p class="card-text">&hellip;</p>
