--- a/tierchen.html
+++ b/tierchen.html
@@ -25,7 +25,7 @@
     <div class="row mt-4">
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/tiger.jpeg" width="256" alt="Roary der Tiger"/>
+                <img class="d-block mx-auto mb-4" src="img_256/tiger.jpeg" width="256" alt="Roary der Tiger"/>
                 <div class="card-body">
                     <h5 class="card-title">Roary der Tiger</h5>
                     <p class="card-text">Jedes Tier im Dschungel kennt den kleinen, frechen Tiger Roary. Verschmitzt und gewitzt, wie er ist, hat er h&auml;ufig nur Dummheiten im Kopf. Aber lange kann ihm keiner b&ouml;se sein. Denn in diesem Tigerchen steckt nat&uuml;rlich auch ein bisschen Miezekatze.</p>
@@ -34,7 +34,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/elch.jpeg" width="256" alt="Morton der Elch"/>
+                <img class="d-block mx-auto mb-4" src="img_256/elch.jpeg" width="256" alt="Morton der Elch"/>
                 <div class="card-body">
                     <h5 class="card-title">Morton der Elch</h5>
                     <p class="card-text">Der Elch Morton erregt mit seinem pr&auml;chtigen Geweih &uuml;berall Aufmerksamkeit. Und das genie&szlig;t er sichtlich. Morton kommt aus dem hohen Norden und ist K&auml;lte und Schnee gew&ouml;hnt. Aber ganz ehrlich &hellip; nichts geht ihm &uuml;ber ein Nickerchen vor dem offenen Kamin.</p>
@@ -43,7 +43,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/hase.jpeg" width="256" alt="Wasabi das Häschen"/>
+                <img class="d-block mx-auto mb-4" src="img_256/hase.jpeg" width="256" alt="Wasabi das Häschen"/>
                 <div class="card-body">
                     <h5 class="card-title">Wasabi das H&auml;schen</h5>
                     <p class="card-text">Verspielt, eigensinnig und fr&ouml;hlich, so ist das H&auml;schen Wasabi. Es findet nichts lustiger, als mit seinen Freunden um die Wette zu rennen, denn im Hakenschlagen und &Uuml;ber-Hindernisse-Springens ist es unschlagbar. Und wer so schnell laufen kann, der ist auch gut im Streiche spielen&hellip;</p>
@@ -52,7 +52,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/tukan.jpeg" width="256" alt="Zico der Tukan"/>
+                <img class="d-block mx-auto mb-4" src="img_256/tukan.jpeg" width="256" alt="Zico der Tukan"/>
                 <div class="card-body">
                     <h5 class="card-title">Zico der Tukan</h5>
                     <p class="card-text">Sieht der Tukan Zico mit seinem gl&auml;nzend schwarzen Federkleid und dem leuchtend gelben Schnabel nicht richtig majest&auml;tisch aus? Als K&ouml;nig der Paradiesv&ouml;gel spreizt er jeden Tag seine Fl&uuml;gel und macht einen ausgedehnten Spazierflug durch den Regenwald.</p>
@@ -61,7 +61,7 @@
         </div>
     </div><div class="row mt-4">        <div class="col">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img/welpe6.jpeg" width="256" alt="Dakota der Welpe"/>
+                <img class="d-block mx-auto mb-4" src="img_256/welpe6.jpeg" width="256" alt="Dakota der Welpe"/>
                 <div class="card-body">
                     <h5 class="card-title">Dakota der Welpe</h5>
                     <p class="card-text">Dakota ist lieb, knuffig und passt genau auf die Handfl&auml;che, so dass er dich &uuml;berall hin begleiten kann. Dakota ist ein verspielter Welpe, neugierig und voller Energie. Seine langen Ohren flattern im Wind, wenn er auf seinen winzigen Pf&ouml;tchen angelaufen kommt.</p>
