Fixed margins. Added link on title

--- a/index.html
+++ b/index.html
@@ -42,51 +42,51 @@
 </div>
 
 <div class="container">
-    <h2 id="arbeiten" class="mt-4 dancing-script">Meine Arbeiten</h2>
+    <h2 id="arbeiten" class="my-4 dancing-script">Meine Arbeiten</h2>
 
-    <div class="row mt-4">
-        <div class="col">
+    <div class="row">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <div class="card-body text-center">
-                    <h3 class="mt-4 dancing-script">Amigurumi Tierchen</h3>
+                    <h3 class="mt-4 dancing-script"><a href="tierchen.html">Amigurumi Tierchen</a></h3>
                 </div>
                 <a href="tierchen.html"><img class="d-block mx-auto mb-4" src="img_256/tiger.jpeg" width="256" alt="Roary der Tiger"/></a>
             </div>
         </div>
 
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <div class="card-body text-center">
-                    <h3 class="mt-4 dancing-script">Boardgame Zubehör</h3>
+                    <h3 class="mt-4 dancing-script"><a href="boardgame.html">Boardgame Zubehör</a></h3>
                 </div>
                 <a href="boardgame.html"><img class="d-block mx-auto mb-4" src="img_256/maus_und_mystik.jpeg" width="256" alt="Maus &amp; Mystik Täschchen"/></a>
             </div>
         </div>
 
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <div class="card-body text-center">
-                    <h3 class="mt-4 dancing-script">Kleine Nerd Ecke</h3>
+                    <h3 class="mt-4 dancing-script"><a href="nerds.html">Kleine Nerd Ecke</a></h3>
                 </div>
                 <a href="nerds.html"><img class="d-block mx-auto mb-4" src="img_256/tentakel.jpeg" width="256" alt="Purpur &amp; Grün Tentakel"/></a>
             </div>
         </div>
 
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <div class="card-body text-center">
-                    <h3 class="mt-4 dancing-script">Pflanzen</h3>
+                    <h3 class="mt-4 dancing-script"><a href="pflanzen.html">Pflanzen</a></h3>
                 </div>
                 <a href="pflanzen.html"><img class="d-block mx-auto mb-4" src="img_256/kakteen.jpeg" width="256" alt="Kakteen"/></a>
             </div>
         </div>
     </div>
 
-    <div class="row mt-4">
-        <div class="col">
+    <div class="row">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <div class="card-body text-center">
-                    <h3 class="mt-4 dancing-script">Klamotten</h3>
+                    <h3 class="mt-4 dancing-script"><a href="klamotten.html">Klamotten</a></h3>
                 </div>
                 <a href="klamotten.html"><img class="d-block mx-auto mb-4" src="img_256/klamotten/haarbaender.jpeg" width="256" alt="Haarbaender"/></a>
             </div>
