--- a/nerds.html
+++ b/nerds.html
@@ -18,12 +18,12 @@
         <a href="index.html#arbeiten" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Zurück</a>
     </div>
 
-    <h2 class="mt-4 dancing-script">Kleine Nerd Ecke</h2>
-    <div>
+    <h2 class="my-4 dancing-script">Kleine Nerd Ecke</h2>
+    <div class="my-4">
         &hellip;    </div>
 
-    <div class="row mt-4">
-        <div class="col">
+    <div class="row">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/yoshi.jpeg" width="256" alt="Yoshi mit Ei"/>
                 <div class="card-body">
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/pilze.jpeg" width="256" alt="PowerUp und LevelUp Pilze"/>
                 <div class="card-body">
@@ -41,7 +41,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/stern.jpeg" width="256" alt="Stern"/>
                 <div class="card-body">
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/tentakel.jpeg" width="256" alt="Purpur & Grün Tentakel"/>
                 <div class="card-body">
