--- a/pflanzen.html
+++ b/pflanzen.html
@@ -18,12 +18,12 @@
         <a href="index.html#arbeiten" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Zurück</a>
     </div>
 
-    <h2 class="mt-4 dancing-script">Pflanzen</h2>
-    <div>
+    <h2 class="my-4 dancing-script">Pflanzen</h2>
+    <div class="my-4">
         &hellip;    </div>
 
-    <div class="row mt-4">
-        <div class="col">
+    <div class="row">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/kakteen.jpeg" width="256" alt="Kakteen"/>
                 <div class="card-body">
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/blume.jpeg" width="256" alt="Blume"/>
                 <div class="card-body">
