--- a/tierchen.html
+++ b/tierchen.html
@@ -18,12 +18,12 @@
         <a href="index.html#arbeiten" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Zurück</a>
     </div>
 
-    <h2 class="mt-4 dancing-script">Amigurumi Tierchen</h2>
-    <div>
+    <h2 class="my-4 dancing-script">Amigurumi Tierchen</h2>
+    <div class="my-4">
         Vor einigen Jahren bin ich durch Zufall auf die Anleitung eines s&uuml;&szlig;en kleinen Tierchens gesto&szlig;en. Seitdem haben mich diese Tierchen nicht mehr losgelassen, denn wer k&ouml;nnte so kleinen s&uuml;&szlig;en Knopfaugen widerstehen. Im Laufe der Jahre habe ich so einige Tierchen geh&auml;kelt und die Freude daran m&ouml;chte ich gerne mit euch teilen.    </div>
 
-    <div class="row mt-4">
-        <div class="col">
+    <div class="row">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/tiger.jpeg" width="256" alt="Roary der Tiger"/>
                 <div class="card-body">
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/elch.jpeg" width="256" alt="Morton der Elch"/>
                 <div class="card-body">
@@ -41,7 +41,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/hase.jpeg" width="256" alt="Wasabi das Häschen"/>
                 <div class="card-body">
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/tukan.jpeg" width="256" alt="Zico der Tukan"/>
                 <div class="card-body">
@@ -59,7 +59,7 @@
                 </div>
             </div>
         </div>
-    </div><div class="row mt-4">        <div class="col">
+    </div><div class="row mt-4">        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/welpe6.jpeg" width="256" alt="Dakota der Welpe"/>
                 <div class="card-body">
