--- a/boardgame.html
+++ b/boardgame.html
@@ -18,12 +18,12 @@
         <a href="index.html#arbeiten" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Zurück</a>
     </div>
 
-    <h2 class="mt-4 dancing-script">Boardgame Zubeh&ouml;r</h2>
-    <div>
+    <h2 class="my-4 dancing-script">Boardgame Zubeh&ouml;r</h2>
+    <div class="my-4">
         &hellip;    </div>
 
-    <div class="row mt-4">
-        <div class="col">
+    <div class="row">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/maus_und_mystik.jpeg" width="256" alt="Maus & Mystik Täschchen"/>
                 <div class="card-body">
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/wuerfelbeutel.jpeg" width="256" alt="Würfeluntersetzer"/>
                 <div class="card-body">
@@ -41,7 +41,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/stoffies.jpeg" width="256" alt="Stoffies"/>
                 <div class="card-body">
