--- a/klamotten.html
+++ b/klamotten.html
@@ -18,12 +18,12 @@
         <a href="index.html#arbeiten" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Zurück</a>
     </div>
 
-    <h2 class="mt-4 dancing-script">Klamotten</h2>
-    <div>
+    <h2 class="my-4 dancing-script">Klamotten</h2>
+    <div class="my-4">
         &hellip;    </div>
 
-    <div class="row mt-4">
-        <div class="col">
+    <div class="row">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/haarbaender.jpeg" width="256" alt="Haarbänder"/>
                 <div class="card-body">
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/haarband_grau.jpeg" width="256" alt="Hellblaues Haarband"/>
                 <div class="card-body">
@@ -41,7 +41,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/asynchron_gehaekelt.jpg" width="256" alt="Asynchron gehäkelt"/>
                 <div class="card-body">
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/bereit_fuer_den_herbst.jpg" width="256" alt="Bereit für den Herbst"/>
                 <div class="card-body">
@@ -59,7 +59,7 @@
                 </div>
             </div>
         </div>
-    </div><div class="row mt-4">        <div class="col">
+    </div><div class="row mt-4">        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/ein_hauch_von_masche.jpg" width="256" alt="Ein Hauch von Masche"/>
                 <div class="card-body">
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/einfaches_strick_top.jpg" width="256" alt="Einfaches Strick-Top"/>
                 <div class="card-body">
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/einfaches_top_mit_lochmuster.jpg" width="256" alt="Einfaches Top mit Lochmuster"/>
                 <div class="card-body">
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/ganz_schoen_schraeg.jpg" width="256" alt="Ganz schön Schräg"/>
                 <div class="card-body">
@@ -95,7 +95,7 @@
                 </div>
             </div>
         </div>
-    </div><div class="row mt-4">        <div class="col">
+    </div><div class="row mt-4">        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/grauer_kurzarmpulli_mit_lochmusterleiste.jpg" width="256" alt="Grauer Kurzarmpulli mit Lochmusterleiste"/>
                 <div class="card-body">
@@ -104,7 +104,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/mode_zum_quadrat.jpg" width="256" alt="Mode zum Quadrat"/>
                 <div class="card-body">
@@ -113,7 +113,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/perfekt_fuer_kuehle_herbsttage.jpg" width="256" alt="Perfekt für kühle Herbsttage"/>
                 <div class="card-body">
@@ -122,7 +122,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/pulli_mit_trompetenaermeln.jpg" width="256" alt="Pulli mit Trompetenärmeln"/>
                 <div class="card-body">
@@ -131,7 +131,7 @@
                 </div>
             </div>
         </div>
-    </div><div class="row mt-4">        <div class="col">
+    </div><div class="row mt-4">        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/pullover_in_lila_toenen.jpg" width="256" alt="Pullover in lila Tönen"/>
                 <div class="card-body">
@@ -140,7 +140,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/retro_look.jpg" width="256" alt="Retro Look"/>
                 <div class="card-body">
@@ -149,7 +149,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/schlichte_eleganz.jpg" width="256" alt="Schlichte Eleganz"/>
                 <div class="card-body">
@@ -158,7 +158,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/schwarz_ist_nie_out.jpg" width="256" alt="Schwarz ist nie out"/>
                 <div class="card-body">
@@ -167,7 +167,7 @@
                 </div>
             </div>
         </div>
-    </div><div class="row mt-4">        <div class="col">
+    </div><div class="row mt-4">        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/schwarz_weiss_mix.jpg" width="256" alt="Schwarz-Weiß-Mix"/>
                 <div class="card-body">
@@ -176,7 +176,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/schwarzer_pulli_fuer_kalte_tage.jpg" width="256" alt="Schwarzer Pulli für kalte Tage"/>
                 <div class="card-body">
@@ -185,7 +185,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/sommerliches_oberteil.jpg" width="256" alt="Sommerliches Oberteil"/>
                 <div class="card-body">
@@ -194,7 +194,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/traum_in_tuerkis.jpg" width="256" alt="Traum in Türkis"/>
                 <div class="card-body">
@@ -203,7 +203,7 @@
                 </div>
             </div>
         </div>
-    </div><div class="row mt-4">        <div class="col">
+    </div><div class="row mt-4">        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/upcycling.jpg" width="256" alt="Upcycling"/>
                 <div class="card-body">
@@ -212,7 +212,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/weisses_sommeroberteil.jpg" width="256" alt="Weißes Sommeroberteil"/>
                 <div class="card-body">
@@ -221,7 +221,7 @@
                 </div>
             </div>
         </div>
-        <div class="col">
+        <div class="col mb-3">
             <div class="card" style="width: 18rem;">
                 <img class="d-block mx-auto mb-4" src="img_256/klamotten/zu_streifen_greifen.jpg" width="256" alt="Zu Streifen greifen"/>
                 <div class="card-body">
