Added more content

--- a/tierchen.html
+++ b/tierchen.html
@@ -68,6 +68,33 @@
                 </div>
             </div>
         </div>
+        <div class="col mb-3">
+            <div class="card" style="width: 18rem;">
+                <img class="d-block mx-auto mb-4" src="img_256/maus.jpg" width="256" alt="Manfred die Maus"/>
+                <div class="card-body">
+                    <h5 class="card-title">Manfred die Maus</h5>
+                    <p class="card-text">Manfred ist vielleicht klein, hat aber immer Lust auf gro&szlig;e Abenteuer. Er hat eine bl&uuml;hende Fantasie, doch solange er nicht nachdenkt, bevor er loslegt, bringt er sich immer wieder in unm&ouml;gliche Situationen.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col mb-3">
+            <div class="card" style="width: 18rem;">
+                <img class="d-block mx-auto mb-4" src="img_256/papagei7.jpeg" width="256" alt="Papagei"/>
+                <div class="card-body">
+                    <h5 class="card-title">Papagei</h5>
+                    <p class="card-text">&hellip;</p>
+                </div>
+            </div>
+        </div>
+        <div class="col mb-3">
+            <div class="card" style="width: 18rem;">
+                <img class="d-block mx-auto mb-4" src="img_256/lemur.jpeg" width="256" alt="Lemur"/>
+                <div class="card-body">
+                    <h5 class="card-title">Lemur</h5>
+                    <p class="card-text">&hellip;</p>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="mt-4">
