Added more content

--- a/klamotten.html
+++ b/klamotten.html
@@ -34,9 +34,9 @@
         </div>
         <div class="col mb-3">
             <div class="card" style="width: 18rem;">
-                <img class="d-block mx-auto mb-4" src="img_256/klamotten/haarband_grau.jpeg" width="256" alt="Hellblaues Haarband"/>
+                <img class="d-block mx-auto mb-4" src="img_256/klamotten/haarband_grau.jpeg" width="256" alt="Graues Haarband"/>
                 <div class="card-body">
-                    <h5 class="card-title">Hellblaues Haarband</h5>
+                    <h5 class="card-title">Graues Haarband</h5>
                     <p class="card-text">&hellip;</p>
                 </div>
             </div>
